Move ALToolbox and ALThemeTemplate files from the framework folder to the components folder

--- a/docs/alkiln/automated_testing.mdx
+++ b/docs/alkiln/automated_testing.mdx
@@ -815,7 +815,7 @@ You might want to add a `wait` Step after that to let the contents become visibl
 
 ([Moving](writing_tests.mdx#tap-tab))
 
-Use the `tap tab` Step to interact with [ALToolbox tabs](framework/altoolbox.md#display-a-series-of-tabs). ALKiln will tap on the tab and then wait until the tab contents are fully visible.
+Use the `tap tab` Step to interact with [ALToolbox tabs](/docs/components/ALToolbox/altoolbox_overview#display-a-series-of-tabs). ALKiln will tap on the tab and then wait until the tab contents are fully visible.
 
 ```
     When I tap the "TabGroup-specific_tab_name-tab" tab
