--- a/docs/alkiln/writing_tests.mdx
+++ b/docs/alkiln/writing_tests.mdx
@@ -627,7 +627,7 @@ This is the only way to explicitly wait after navigating to the new page. Some p
 
 **The Step:**
 
-Use the "tap and stay" Step to tap on HTML elements without navigating to a new page. For example, you can tap on [collapsible content](https://assemblyline.suffolklitlab.org/docs/framework/altoolbox#collapsible-help-text) to show the text inside.
+Use the "tap and stay" Step to tap on HTML elements without navigating to a new page. For example, you can tap on [collapsible content](/docs/components/ALToolbox/altoolbox_overview#collapsible-help-text) to show the text inside.
 
 The Step format:
 
@@ -660,7 +660,7 @@ It is a good idea to add a [`wait` Step](#wait) after this Step to let the conte
 
 **The Step:**
 
-Use the "tap tab" Step to interact with AssemblyLine's [ALToolbox tabs](framework/altoolbox.md#display-a-series-of-tabs). ALKiln will tap on the tab and then wait until the tab contents are fully visible.
+Use the "tap tab" Step to interact with AssemblyLine's [ALToolbox tabs](/docs/components/ALToolbox/altoolbox_overview#display-a-series-of-tabs). ALKiln will tap on the tab and then wait until the tab contents are fully visible.
 
 The Step format:
 
@@ -832,7 +832,7 @@ If an answer needs to have multiple lines, you can still only use one line in yo
 
 ### Dates {#dates}
 
-Dates are a specific kind of text value. ALKiln expects the format ##/##/####. For example, 06/26/2015. For [Assembly Line custom three-parts date fields](../framework/altoolbox#birthdate-and-threepartsdate-custom-data-types), ALKiln will assume the date format is dd/mm/yyyy.
+Dates are a specific kind of text value. ALKiln expects the format ##/##/####. For example, 06/26/2015. For [Assembly Line custom three-parts date fields](/docs/components/ALToolbox/altoolbox_overview#birthdate-and-threepartsdate-custom-data-types), ALKiln will assume the date format is dd/mm/yyyy.
 
 There is also [a special ALKiln value named `today`](#today).
 
