Move ALKiln files to components folder

--- a/docs/components/ALKiln/advanced.mdx
+++ b/docs/components/ALKiln/advanced.mdx
@@ -2,7 +2,6 @@
 id: alkiln_advanced
 title: ALKiln advanced topics
 sidebar_label: Advanced
-slug: /alkiln/advanced
 ---
 
 🚧 This page is a stub and sections will be added as resources allow.
@@ -15,7 +14,7 @@ You don't have to choose just one way to run ALKiln, you can use all of them. He
 
 ### Testing your Playground Projects
 
-([Moving](setup.mdx#diy-details))
+([Moving](alkiln_setup#diy-details))
 
 [ALKilnInThePlayground](https://github.com/SuffolkLITLab/docassemble-ALKilnInThePlayground) is a package you can install on your server. When you run its interview, you will be able to pick a Project from your Playground and run the tests in that Project.
 
@@ -52,7 +51,7 @@ When the tests are done, the output page will show you all the generated reports
 
 ### Triggering tests on your server from GitHub
 
-([Moving](setup.mdx#githubNyou-details))
+([Moving](alkiln_setup#githubNyou-details))
 
 These tests run on GitHub, but they still interact with your server and basically do the same things the Playground tests do, you're just not there to see.
 
@@ -98,7 +97,7 @@ At the end, you can see a report and logs right in the [workflow's "job" page](h
 
 ### Testing on a temporary isolated GitHub server
 
-([Moving](setup.mdx#sandbox-details))
+([Moving](alkiln_setup#sandbox-details))
 
 These tests also run on GitHub, but they create a new docassemble server on GitHub itself and interact with that. They never touch your server.
 
