--- a/docs/components/ALKiln/deprecated.mdx
+++ b/docs/components/ALKiln/deprecated.mdx
@@ -2,7 +2,6 @@
 id: alkiln_deprecated
 title: Older versions of ALKiln documentation
 sidebar_label: WIP Older versions
-slug: /alkiln/old
 ---
 
 :::warning
@@ -17,6 +16,6 @@ Our documentation changes over time. It can be jarring for users comfortable and
 
 To be archived after approval of changes:
 
-- [Overview](automated_testing.mdx)
-- [Advanced](alkiln_advanced.mdx)
+- [Overview](alkiln_about)
+- [Advanced](alkiln_advanced)
 
