--- a/docs/components/ALKiln/writing_tests.mdx
+++ b/docs/components/ALKiln/writing_tests.mdx
@@ -626,7 +626,7 @@ This is the only way to explicitly wait after navigating to the new page. Some p
 
 **The Step:**
 
-Use the "tap and stay" Step to tap on HTML elements without navigating to a new page. For example, you can tap on [collapsible content](/docs/components/ALToolbox/altoolbox_overview#collapsible-help-text) to show the text inside.
+Use the "tap and stay" Step to tap on HTML elements without navigating to a new page. For example, you can tap on [collapsible content](../ALToolbox/altoolbox_overview#collapsible-help-text) to show the text inside.
 
 The Step format:
 
@@ -659,7 +659,7 @@ It is a good idea to add a [`wait` Step](#wait) after this Step to let the conte
 
 **The Step:**
 
-Use the "tap tab" Step to interact with AssemblyLine's [ALToolbox tabs](/docs/components/ALToolbox/altoolbox_overview#display-a-series-of-tabs). ALKiln will tap on the tab and then wait until the tab contents are fully visible.
+Use the "tap tab" Step to interact with AssemblyLine's [ALToolbox tabs](../ALToolbox/altoolbox_overview#display-a-series-of-tabs). ALKiln will tap on the tab and then wait until the tab contents are fully visible.
 
 The Step format:
 
@@ -831,7 +831,7 @@ If an answer needs to have multiple lines, you can still only use one line in yo
 
 ### Dates {#dates}
 
-Dates are a specific kind of text value. ALKiln expects the format ##/##/####. For example, 06/26/2015. For [Assembly Line custom three-parts date fields](/docs/components/ALToolbox/altoolbox_overview#birthdate-and-threepartsdate-custom-data-types), ALKiln will assume the date format is dd/mm/yyyy.
+Dates are a specific kind of text value. ALKiln expects the format ##/##/####. For example, 06/26/2015. For [Assembly Line custom three-parts date fields](../ALToolbox/altoolbox_overview#birthdate-and-threepartsdate-custom-data-types), ALKiln will assume the date format is dd/mm/yyyy.
 
 There is also [a special ALKiln value named `today`](#today).
 
