Restore ALKiln slugs; some links still broken

--- a/docs/components/ALKiln/deprecated.mdx
+++ b/docs/components/ALKiln/deprecated.mdx
@@ -2,6 +2,7 @@
 id: alkiln_deprecated
 title: Older versions of ALKiln documentation
 sidebar_label: WIP Older versions
+slug: old
 ---
 
 :::warning
@@ -16,6 +17,6 @@ Our documentation changes over time. It can be jarring for users comfortable and
 
 To be archived after approval of changes:
 
-- [Overview](alkiln_about)
-- [Advanced](alkiln_advanced)
+- [Overview](automated_testing.mdx)
+- [Advanced](advanced.mdx)
 
