--- a/docs/components/ALKiln/setup.mdx
+++ b/docs/components/ALKiln/setup.mdx
@@ -2,6 +2,7 @@
 id: alkiln_setup
 title: Set up ALKiln tests
 sidebar_label: WIP Setup/Installation
+slug: setup
 ---
 
 import { GTOYS, AutoDIY, KittyLitter } from './components/\_test_types.js';
