--- a/docs/components/ALKiln/writing_tests.mdx
+++ b/docs/components/ALKiln/writing_tests.mdx
@@ -2,6 +2,7 @@
 id: alkiln_writing_tests
 title: Writing ALKiln tests
 sidebar_label: WIP Writing tests
+slug: writing
 ---
 
 import styles from "/src/css/images.module.css"
