--- a/docs/components/ALKiln/automated_testing.mdx
+++ b/docs/components/ALKiln/automated_testing.mdx
@@ -2,6 +2,7 @@
 id: alkiln_about
 title: ALKiln automated testing
 sidebar_label: Overview
+slug: alkiln
 ---
 
 <!-- slug: /alkiln_old_overview -->
@@ -30,7 +31,7 @@ You can also read the [presentation slides themselves](https://docs.google.com/p
 
 ([Moving](setup.mdx))
 
-You can run ALKiln in a variety of ways, each with their [pros and cons and other details](alkiln_advanced#multiple-ways-to-run-alkiln). The section below is about setting up different ways of running tests.
+You can run ALKiln in a variety of ways, each with their [pros and cons and other details](advanced.mdx#multiple-ways-to-run-alkiln). The section below is about setting up different ways of running tests.
 
 
 ### Set up for ALKilnInThePlayground
