--- a/docs/components/ALKiln/intro.mdx
+++ b/docs/components/ALKiln/intro.mdx
@@ -2,6 +2,7 @@
 id: alkiln_intro
 title: ALKiln automated testing
 sidebar_label: WIP Intro
+slug: intro
 ---
 
 :::warning
@@ -9,7 +10,7 @@ WIP (Work in progress)
 :::
 
 
-Welcome to the ALKiln testing framework! It helps you check that your docassemble interviews work the way you want them to. ALKiln acts like a user, following your instructions to do things like [fill in fields](alkiln_writing_tests#story-table), [upload files](alkiln_writing_tests#upload), [sign in](alkiln_writing_tests#sign-in), and [check your PDFs for accuracy](alkiln_writing_tests#compare-files).
+Welcome to the ALKiln testing framework! It helps you check that your docassemble interviews work the way you want them to. ALKiln acts like a user, following your instructions to do things like [fill in fields](writing_tests.mdx#story-table), [upload files](writing_tests.mdx#upload), [sign in](writing_tests.mdx#sign-in), and [check your PDFs for accuracy](writing_tests.mdx#compare-files).
 
 **Any basic docassemble package can use ALKiln**.[^basic] ALKiln (Assembly Line Kiln) took its name from where it was born - the AssemblyLine project - but it can be used with any docassemble project.<!-- It does come with features that are especially useful for AssemblyLine users.-->
 
@@ -20,11 +21,11 @@ Welcome to the ALKiln testing framework! It helps you check that your docassembl
 
 Ready to start testing? Need to quickly refresh your memory on some important points? Start here.
 
-- [Set up ALKiln for your package](alkiln_setup#recommended)
-- [Write your first test](alkiln_setup#first-test)
-- [Generate a first draft for more complicated tests](alkiln_writing_tests#alkiln_story)
+- [Set up ALKiln for your package](setup.mdx#recommended)
+- [Write your first test](setup.mdx#first-test)
+- [Generate a first draft for more complicated tests](writing_tests.mdx#alkiln_story)
 
-See [a few more reminders here](alkiln_writing_tests#refresh).
+See [a few more reminders here](writing_tests.mdx#refresh).
 
 
 ## What will you find in these documents? {#toc}
@@ -33,11 +34,11 @@ ALKiln topics you can explore:
 
 <!-- Change "setup" to "install"? -->
 
-- [Setting up](alkiln_setup): Learn different ways to install ALKiln for your package or organization and information about those test types
-- [Writing tests](alkiln_writing_tests): What you need to know to effectively write tests
+- [Setting up](setup.mdx): Learn different ways to install ALKiln for your package or organization and information about those test types
+- [Writing tests](writing_tests.mdx): What you need to know to effectively write tests
 - [Troubleshooting](troubleshooting.mdx): Help with common errors and warnings
-- Support for [older Versions](alkiln_deprecated): Guides for using older out-of-date features
-- [Frequently Asked Questions](alkiln_writing_tests#faq) (FAQ): Find answers to common questions
+- Support for [older Versions](deprecated.mdx): Guides for using older out-of-date features
+- [Frequently Asked Questions](writing_tests.mdx#faq) (FAQ): Find answers to common questions
 - [Security](security.mdx): Find out how to stay safe by using best practices and how we protect you too
 
 
@@ -45,7 +46,7 @@ ALKiln topics you can explore:
 
 There are two main purposes for ALKiln tests right now.
 
-1. You can start using the [simple "it runs" test](alkiln_setup#first-test) right away. It just makes sure that your interview starts without an error. Even that can be useful. For example, if you forget to commit a template to GitHub, that test will catch it.
+1. You can start using the [simple "it runs" test](setup.mdx#first-test) right away. It just makes sure that your interview starts without an error. Even that can be useful. For example, if you forget to commit a template to GitHub, that test will catch it.
 1. The next type of testing comes a while after that, once your interview has stabilized. For example, the variable names are less likely to change. Then you can add more comprehensive ALKiln tests. After that, they will keep an eye on things for you. While you refine your interview by changing wording, the order of fields and pages, adding translations, and so on, the ALKiln tests will let you know if and when your changes break your interview.
 
 
@@ -64,7 +65,7 @@ Tests can protect your users from bugs that can:
 - Stop them completely with an error
 - Lose their trust in you
 
-You can write your simple [first test](alkiln_setup#first-test) right away if you want. Wait to write more complex tests till your code is more stable. "More stable" means that the variables for the section you are testing are mostly staying the same.
+You can write your simple [first test](setup.mdx#first-test) right away if you want. Wait to write more complex tests till your code is more stable. "More stable" means that the variables for the section you are testing are mostly staying the same.
 
 When you add a new required field or change the variable name or values of a user's field, you will need to update those tests.
 
