--- a/docs/components/ALKiln/security.mdx
+++ b/docs/components/ALKiln/security.mdx
@@ -2,6 +2,7 @@
 id: alkiln_security
 title: Security
 sidebar_label: WIP Security
+slug: security
 ---
 
 import SecureEnvVars from './components/\_secure_env_vars.md';
