--- a/docs/components/ALKiln/troubleshooting.mdx
+++ b/docs/components/ALKiln/troubleshooting.mdx
@@ -2,6 +2,7 @@
 id: alkiln_troubleshooting
 title: ALKiln troubleshooting and errors
 sidebar_label: WIP Troubleshooting & errors
+slug: trouble
 ---
 
 import { GTOYS, AutoDIY, KittyLitter } from './components/\_test_types.js';
