--- a/docs/components/ALKiln/writing_tests.mdx
+++ b/docs/components/ALKiln/writing_tests.mdx
@@ -35,7 +35,7 @@ If you are writing tests <!-- , running tests, --> or need to learn about test f
 
 If you are coming back and just need some resource reminders, here is a short list:
 
-- You can see [what your first test might look like](alkiln_setup#first-test).
+- You can see [what your first test might look like](setup.mdx#first-test).
 - You can generate a first draft for a more complex test with the help of the [ALKiln Story Table Step generator](#alkiln_story).
 - If your interview is using generic objects or index variables, you **must** include [special HTML](#special-html) in your interview.
 - Every time you change or add a required field variable, you must update the tests that need that variable.
@@ -2537,7 +2537,7 @@ If your package is leaving out the al_package.yml file from the Assembly Line pa
 
 ### Testing unfinished code {#unstable-tip}
 
-If you are still developing your interview, you can still write a [simple test](alkiln_setup#first-test) to make sure your interview at least loads without an error. You might want to wait till your code is more stable to write more tests.
+If you are still developing your interview, you can still write a [simple test](setup.mdx#first-test) to make sure your interview at least loads without an error. You might want to wait till your code is more stable to write more tests.
 
 On the other hand, if there is a part of your interview that you think will stay pretty much the same, you can write tests that just go part-way through the interview to test just the stable part of the code. That way, you can work on adding more content and yet also be sure that the work you've already done stays working.
 
