Tweak sensitive data intro section

--- a/docs/components/ALKiln/security.mdx
+++ b/docs/components/ALKiln/security.mdx
@@ -244,7 +244,7 @@ Here are a couple general good tips for keeping your testing server healthy:
 
 **This is for:** Everyone
 
-Even after keeping personal and security-critical data away from [the account that runs ALKiln tests](#test-accounts), there are still ways you can expose your test server's sensitive data in tests. Even if you are using a testing server, that server still has credentials, like API keys and passwords, and you should avoid exposing those to the ALKiln tests.
+Even after keeping personal and security-critical data away from [the account that runs ALKiln tests](#test-accounts), use [mock data](#mock-data), and so on, there are still ways you can expose your test server's sensitive data in tests. Even if you are using a testing server, that server still has credentials, like API keys and passwords, and you should avoid exposing those to the ALKiln tests.
 
 
 ### Avoid sensitive data in package files {#sensitive-info-files}
